--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-syntax-highlighter": "^15.4.3",
     "react-visibility-sensor": "^5.1.1",
     "responsive-loader": "^2.3.0",
+    "rss": "^1.2.2",
     "sharp": "^0.27.0",
     "simple-react-lightbox": "^3.5.1",
     "styled-components": "^5.2.1",
@@ -51,6 +52,7 @@
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^4.0.0",
+    "@types/rss": "0.0.28",
     "@zeit/next-css": "^1.0.1",
     "autoprefixer": "^10.2.5",
     "generate-robotstxt": "^8.0.3",
