--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
     "simple-react-lightbox": "^3.5.1",
     "styled-components": "^5.2.1",
     "swr": "^0.3.11",
-    "url-loader": "^4.1.1",
     "webp-loader": "^0.6.0"
   },
   "devDependencies": {
@@ -60,6 +59,7 @@
     "postcss-preset-env": "^6.7.0",
     "prettier": "^2.2.1",
     "tailwindcss": "^2.0.3",
-    "typescript": "^4.2.3"
+    "typescript": "^4.2.3",
+    "url-loader": "^4.1.1"
   }
 }
