--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,15 +26,15 @@ jobs:
       
 
     - name: Installing my packages
-      run: npm ci
+      run: yarn ci
 
     - name: Build my App  
-      run: npm run build
+      run: yarn build
       env:
-        NEXT_PUBLIC_BASE_PATH: /youtube-2020-august-github-pages-github-actions
-    - run: npm run export
+        NEXT_PUBLIC_BASE_PATH: /mts-technonatura
+    - run: yarn export
       env:
-        NEXT_PUBLIC_BASE_PATH: /youtube-2020-august-github-pages-github-actions
+        NEXT_PUBLIC_BASE_PATH: /mts-technonatura
     - run: touch ./out/.nojekyll
     
     - name: Deploy 🚀
