--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,7 +26,7 @@ jobs:
       
 
     - name: Installing my packages
-      run: yarn ci
+      run: yarn install
 
     - name: Build my App  
       run: yarn build
