--- a/package.json
+++ b/package.json
@@ -59,7 +59,6 @@
     "postcss-preset-env": "^6.7.0",
     "prettier": "^2.2.1",
     "tailwindcss": "^2.0.3",
-    "typescript": "^4.2.3",
-    "url-loader": "^4.1.1"
+    "typescript": "^4.2.3"
   }
 }
