--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@material-ui/icons": "^4.11.2",
     "axios": "^0.21.1",
     "canvas": "^2.6.1",
+    "formik": "^2.2.6",
     "framer-motion": "^4.1.2",
     "github-markdown-css": "^4.0.0",
     "gray-matter": "^4.0.2",
@@ -45,7 +46,8 @@
     "sharp": "^0.27.0",
     "styled-system": "^5.1.5",
     "swr": "^0.3.11",
-    "webp-loader": "^0.6.0"
+    "webp-loader": "^0.6.0",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^4.0.0",
