--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,6 +4,7 @@
   "description": "Website Technonatura Depok",
   "theme_color": "#f0efeb",
   "background_color": "#ffffff",
+  "scope": "/",
   "start_url": "/",
   "display": "standalone",
   "icons": [
