--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "nprogress": "^0.2.0",
     "raw-loader": "^4.0.2",
     "react": "17.0.1",
+    "react-cookie": "^4.0.3",
     "react-dom": "17.0.1",
     "react-intersection-observer": "^8.31.0",
     "react-lazyload": "^3.1.0",
